# RNCryptor-C

./: .gitignore  ChangeLog.asc  ChangeLog.md  Changelog.asc  LICENSE.txt  Makefile  Makefile.in  Makefile.nmake  README.asc  README.md  TODO.txt  configure  configure.in  configure_mac.sh  init_vs14.bat  intel_mac.sh  mkdocs.sh  mutils.c  mutils.h  mx_mac.sh  rn_decrypt.c  rn_decrypt_with_key.c  rn_encrypt.c  rn_encrypt_with_key.c  rncryptor_c.c  rncryptor_c.h
docs/: ChangeLog.md  LICENSE.txt  README.md  glossary.txt
tests/: GenVectorTests-C.rb  aes256cbc.sh  image.enc  image.enc_md5.txt  rndecrypt.rb  test.enc  test.rb  test_with_test_vectors.c  test_withkey.enc  vectorparser.rb  verify.c  vg.sh
tests/test_vectors/v1/: kdf  password
tests/test_vectors/v2/: kdf  password
tests/test_vectors/v3/: kdf  key  password
